# miosix-example-project

./: .gitmodules  CMakeLists.txt
config/: miosix_settings.h
src/: main.cpp
stm32f429zi_nokia/config/: board_options.cmake
